# TextScript

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  clean  clean.bat  cmake_install.cmake  compile_commands.json  message.txt  run  run.bat
.github/workflows/: cmake-single-platform.yml
Engine/: CMakeLists.txt  Makefile  cmake_install.cmake
Engine/include/: Application.h  Event.h  TextScript.h  log.h  pch.h  textscript_api.h
Engine/include/Event/: Event.h  Keyboard.h
Engine/include/Objects/: BaseObject.h  TextObject.h
Engine/src/: Application.cpp  TextScript.cpp  log.cpp  pch.h
Engine/src/Event/: Event.cpp  Keyboard.cpp
Engine/src/Objects/: BaseObject.cpp  TextObject.cpp
Sandbox/: CMakeLists.txt  Makefile  cmake_install.cmake
Sandbox/include/: sandbox.h
Sandbox/src/: main.cpp
